--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+.vscode
+.DS_Store
+.coverage
+.pytest_cache
+htmlcov
+coverage.xml
+__pycache__
+*.py[cod]
+*$py.class
+
 *.tmp
 *.pytest_cache
 __pycache__/
